# 3d-graphics

./: CMakeLists.txt
src/: fundamentals.cpp  fundamentals.md  main.cpp
src/include/: geometry.hpp
src/lib/: geometry.cpp
